finish seller work
